Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38640

Serial port that do not implement the full feature set can't be opened

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 5.3.1
    • 5.2.1
    • Serial Port
    • None
    • MacOSX, Linux, Unix
    • 63d3fc0c0679a801da54cf390728120338fbd187

      When an opened device does not implement all the features of a "true" serial port, some settings may not work. Thus, the following:

          if (!d->setBaudRate()
              || !d->setDataBits(d->dataBits)
              || !d->setParity(d->parity)
              || !d->setStopBits(d->stopBits)
              || !d->setFlowControl(d->flowControl)) {
              // || !d->setDataTerminalReady(d->dataTerminalReady) // THIS FAILS
              // || !d->setRequestToSend(d->requestToSend)) {      // THIS FAILS AS WELL
              close();
              return false;
          }
      

      will end up closing a working serial port. For example, a PTY serial port opened by socat will not necessarily have DTR and RTS working. Thus, I suggest that in case those fail, we leave the serial port opening, and emit an error to the user so he can decide to deal or not with the problem.

        For Gerrit Dashboard: QTBUG-38640
        # Subject Branch Project Status CR V

            dzedsystems Dyami Caliri
            zmo Bernard
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes