Initialize dataTerminalReady and requestToSend.

QSP::open should read values of DTR/RTS after a successful open,
not try to write them. The user should not expect to set DTR/RTS
before opening the port (unlike the other settings).

Tested on Mac OS X 10.8.5.

Task-number: QTBUG-38640
Change-Id: Iffea464f412c6972aa26a408ba01e304fa813c76
Reviewed-by: Sergey Belyashov <Sergey.Belyashov@gmail.com>
Reviewed-by: Denis Shienkov <denis.shienkov@gmail.com>